# ryder-os

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
ryder_os_kernel/: Cargo.toml
ryder_os_kernel/.cargo/: config.toml
ryder_os_kernel/src/: main.rs
ryder_os_kernel/src/console/: console_writer.rs  mod.rs
ryder_os_kernel/src/framebuffer/: color.rs  frame_buffer_writer.rs  mod.rs
ryder_os_kernel/src/interrupts/: interrupt_descriptor_table.rs  mod.rs  pic.rs
ryder_os_kernel/src/interrupts/handlers/: keyboard.rs
ryder_os_kernel/src/keyboard/: decoder.rs  mod.rs
ryder_os_kernel/src/serial/: mod.rs  serial_port.rs
src/: main.rs
