[package]
name = "ryder_os_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = {version = "0.11.16"}
noto-sans-mono-bitmap = {version = "0.3.2", features = ["all"]}
uart_16550 = "0.6.0"
spin = "0.12.2"
pic8259 = "0.11.0"
x86_64 = {version = "0.15.5", features = ["abi_x86_interrupt", "instructions"]}
pc-keyboard = "0.9.0"

[[bin]]
name = "ryder_os_kernel"
test = false
bench = false
